<resources>
    <string name="app_name" translatable="false">FoodOrderingApp</string>
    <string name="mobile_number_10_digits" translatable="false">Mobile Number (10 Digits)</string>
    <string name="password" translatable="false">Password</string>
    <string name="login" translatable="false">LOGIN</string>
    <string name="forgot_password" translatable="false"><u>Forgot Password?</u></string>
    <string name="sign_up_now" translatable="false"><u>Don\'t have an account?Sign up now</u></string>
    <string name="name_min_3_characters">Name (Min. 3 characters)</string>
    <string name="email_address">Email Address</string>
    <string name="delivery_address">Delivery Address</string>
    <string name="confirm_register_password">Confirm Password</string>
    <string name="register">Register</string>
    <string name="next">NEXT</string>
    <string name="enter_your_registered_mobile_number_and_email_below">Enter your Registered Mobile Number and Email below:</string>
    <string name="enter_the_received_otp_below">Enter the received OTP below</string>
    <string name="otp_4_characters">OTP (4 characters)</string>
    <string name="new_password_min_4_characters">New Password (Min. 4 characters)</string>
    <string name="confirm_new_password">Confirm Password</string>
    <string name="submit">SUBMIT</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="open_drawer">Open Drawer</string>
    <string name="close_drawer">Close Drawer</string>
    <string name="home">Home</string>
    <string name="my_profile">My Profile</string>
    <string name="favourite_restaurants">Favourite Restaurants</string>
    <string name="order_history">Order History</string>
    <string name="faqs">FAQs</string>
    <string name="logout">Logout</string>
    <string name="preferences_file_name">Application Preferences</string>
    <string name="home_fragment">Home Fragment</string>
    <string name="favourite_restaurants_fragment">Favourite Restaurants Fragment</string>
    <string name="name_of_restaurant">Name Of Restaurant</string>
    <string name="person">/person</string>
    <string name="price">price</string>
    <string name="action_sort">Sort</string>
    <string name="proceed_to_cart">Proceed to Cart</string>
    <string name="name_of_item">Name Of Item</string>
    <string name="choose_from_menu_listed_below">Choose from menu listed below:</string>
    <string name="ordering_from">Ordering From:-</string>
    <string name="your_previous_orders_are_listed_below">Your Previous Orders are listed below:</string>
    <string name="you_do_not_have_any_favourite_restaurants">You do not have any favourite restaurants</string>
    <string name="you_haven_t_placed_any_orders_yet">You haven\'t placed any orders yet</string>
</resources>
