<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.RegisterActivity"
    android:background="@color/colorPrimary">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/Toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        android:theme="@style/ThemeOverlay.AppCompat.Dark"/>


    <ImageView
        android:id="@+id/imgAppLogo"
        android:layout_width="match_parent"
        android:layout_height="140dp"
        android:layout_marginTop="10dp"
        android:layout_below="@id/Toolbar"
        android:src="@drawable/food_ordering_app"/>

    <EditText
        android:id="@+id/etRegisterName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/imgAppLogo"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="5dp"
        android:background="#ffff"
        android:drawableStart="@drawable/ic_profile_asset"
        android:hint="@string/name_min_3_characters"
        android:drawablePadding="4dp"
        android:padding="8dp"
        android:inputType="text"/>

    <EditText
        android:id="@+id/etRegisterEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/etRegisterName"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="8dp"
        android:background="#ffff"
        android:drawableStart="@drawable/ic_email_asset"
        android:hint="@string/email_address"
        android:inputType="textEmailAddress"
        android:drawablePadding="4dp"
        android:padding="8dp" />


    <EditText
        android:id="@+id/etRegisterMobileNo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/etRegisterEmail"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="8dp"
        android:background="#ffff"
        android:drawableStart="@drawable/ic_smartphone_asset"
        android:hint="@string/mobile_number_10_digits"
        android:drawablePadding="4dp"
        android:padding="8dp"
        android:inputType="phone"
        android:maxLength="10"/>

    <EditText
        android:id="@+id/etRegisterAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/etRegisterMobileNo"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="8dp"
        android:background="#ffff"
        android:drawableStart="@drawable/ic_address_asset"
        android:hint="@string/delivery_address"
        android:drawablePadding="4dp"
        android:padding="8dp"
        android:inputType="text"
        android:maxLines="2"/>


    <EditText
        android:id="@+id/etRegisterPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/etRegisterAddress"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:background="#ffff"
        android:hint="@string/password"
        android:padding="8dp"
        android:drawableStart="@drawable/ic_password_asset"
        android:drawablePadding="4dp"
        android:inputType="textPassword"
        android:maxLines="1" />

    <EditText
        android:id="@+id/etConfirmRegisterPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/etRegisterPassword"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="8dp"
        android:background="#ffff"
        android:drawableStart="@drawable/ic_password_asset"
        android:hint="@string/confirm_register_password"
        android:drawablePadding="4dp"
        android:inputType="textPassword"
        android:padding="8dp" />



    <Button
        android:id="@+id/btnRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/etConfirmRegisterPassword"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:background="@color/colorPrimaryDark"
        android:text="@string/register"
        android:textColor="#ffff"
        android:textStyle="bold"
        android:textSize="18sp"/>


</RelativeLayout>