<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.ForgotPasswordActivity"
    android:background="@color/colorPrimary">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/Toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        android:theme="@style/ThemeOverlay.AppCompat.Dark"/>

    <ImageView
        android:id="@+id/imgAppLogo"
        android:layout_width="match_parent"
        android:layout_height="140dp"
        android:layout_below="@id/Toolbar"
        android:layout_marginTop="10dp"
        android:src="@drawable/food_ordering_app"/>

    <TextView
        android:id="@+id/txtForgotPasswordLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_your_registered_mobile_number_and_email_below"
        android:layout_marginTop="5dp"
        android:layout_below="@id/imgAppLogo"
        android:textColor="#ffff"
        android:textSize="15sp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp" />


    <EditText
        android:id="@+id/etRegisterMobileNo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtForgotPasswordLabel"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="15dp"
        android:background="#ffff"
        android:hint="@string/mobile_number_10_digits"
        android:padding="8dp"
        android:inputType="phone"
        android:maxLength="10"/>

    <EditText
        android:id="@+id/etRegisterEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/etRegisterMobileNo"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="15dp"
        android:background="#ffff"
        android:hint="@string/email_address"
        android:padding="8dp" />


    <Button
        android:id="@+id/btnNext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/etRegisterEmail"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:background="@color/colorPrimaryDark"
        android:text="@string/next"
        android:textColor="#ffff"
        android:textStyle="bold"
        android:textSize="18sp"/>


</RelativeLayout>